src/tests/fixtures/type_definitions/RenamedTypeWithoutClassName.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlType Query
 */
export default class {
  /** @gqlField */
  hello(): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions/RenamedTypeWithoutClassName.invalid.ts:4:1 - error: Unexpected `@gqlType` annotation on unnamed class declaration.

  4 export default class {
    ~~~~~~~~~~~~~~~~~~~~~~
  5   /** @gqlField */
    ~~~~~~~~~~~~~~~~~~
... 
  8   }
    ~~~
  9 }
    ~
